force-app/main/default/objects/Quartely_Sales_target__c/Quartely_Sales_target__c.object-meta.xml
<CustomObject>
    <label>Quartely Sales target</label>
    <nameField>
        <displayFormat>QST-{000}</displayFormat>
        <label>QST No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quartely Sales targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>