force-app/main/default/objects/Quartely_Sales_target__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quartely Sales targets</relationshipLabel>
    <relationshipName>Quartely_Sales_targets</relationshipName>
    <type>Lookup</type>
</CustomField>