force-app/main/default/objects/Quartely_Sales_target__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Date</type>
</CustomField>