force-app/main/default/objects/Quartely_Sales_target__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quartely_Sales_targets</relationshipName>
    <type>Lookup</type>
</CustomField>